<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:id="@+id/tv_top10"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp"
                android:text="affiche le top 10 d'un jeu "
                android:textSize="20dp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/tv_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textAlignment="center"
                android:text = "@string/nom1jeu"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:ellipsize="start"
                android:id="@+id/et_nomJeu"
                android:inputType="text"
                android:enabled="true" />

            <Button
                android:id="@+id/bt_valider_nomJeu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="30dp"
                android:textColor="#C9C9C9"
                android:text="@string/valider"
                android:layout_alignParentLeft="true"
               />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tl_afficheTop10">

                <TableRow
                    android:layout_marginBottom="5dp">
                    <TextView
                        android:layout_marginRight="5dp"
                        android:id="@+id/tv_top10L1C1"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:text="@string/top10_l1"
                        />
                    <TextView
                        android:layout_width="200dp"
                        android:id="@+id/tv_top10L1C2"
                        android:textSize="20sp"
                        android:textAlignment="center"/>
                </TableRow>
                <TableRow
                    android:layout_marginBottom="5dp">
                    <TextView
                        android:layout_marginRight="5dp"
                        android:id="@+id/tv_top10L2C1"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:text="@string/top10_l2"/>
                    <TextView
                        android:layout_width="200dp"
                        android:id="@+id/tv_top10L2C2"
                        android:textSize="20sp"
                        android:textAlignment="center"/>
                </TableRow>
                <TableRow
                    android:layout_marginBottom="5dp">
                    <TextView
                        android:layout_marginRight="5dp"
                        android:id="@+id/tv_top10L3C1"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:text="@string/top10_l3"/>
                    <TextView
                        android:layout_width="200dp"
                        android:id="@+id/tv_top10L3C2"
                        android:textSize="20sp"
                        android:textAlignment="center"/>
                </TableRow>
                <TableRow
                    android:layout_marginBottom="5dp">
                    <TextView
                        android:layout_marginRight="5dp"
                        android:id="@+id/tv_top10L4C1"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:text="@string/top10_l4"/>
                    <TextView
                        android:layout_width="200dp"
                        android:id="@+id/tv_top10L4C2"
                        android:textSize="20sp"
                        android:textAlignment="center"/>
                </TableRow>
                <TableRow
                    android:layout_marginBottom="5dp">
                    <TextView
                        android:layout_marginRight="5dp"
                        android:id="@+id/tv_top10L5C1"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:text="@string/top10_l5"/>
                    <TextView
                        android:layout_width="200dp"
                        android:id="@+id/tv_top10L5C2"
                        android:textSize="20sp"
                        android:textAlignment="center"/>
                </TableRow>
                <TableRow
                    android:layout_marginBottom="5dp">
                    <TextView
                        android:layout_marginRight="5dp"
                        android:id="@+id/tv_top10L6C1"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:text="@string/top10_l6" />
                    <TextView
                        android:layout_width="200dp"
                        android:id="@+id/tv_top10L6C2"
                        android:textSize="20sp"
                        android:textAlignment="center"/>
                </TableRow>
                <TableRow
                    android:layout_marginBottom="5dp">
                    <TextView
                        android:layout_marginRight="5dp"
                        android:id="@+id/tv_top10L7C1"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:text="@string/top10_l7"/>
                    <TextView
                        android:layout_width="200dp"
                        android:id="@+id/tv_top10L7C2"
                        android:textSize="20sp"
                        android:textAlignment="center"/>
                </TableRow>
                <TableRow
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:layout_marginRight="5dp"
                        android:id="@+id/tv_top10L8C1"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:text="@string/top10_l8"/>
                    <TextView
                        android:layout_width="200dp"
                        android:id="@+id/tv_top10L8C2"
                        android:textSize="20sp"
                        android:textAlignment="center"/>
                </TableRow>
                <TableRow
                    android:layout_marginBottom="5dp">
                    <TextView
                        android:layout_marginRight="5dp"
                        android:id="@+id/tv_top10L9C1"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:text="@string/top10_l9"/>
                    <TextView
                        android:layout_width="200dp"
                        android:id="@+id/tv_top10L9C2"
                        android:textSize="20sp"
                        android:textAlignment="center"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_marginRight="5dp"
                        android:id="@+id/tv_top10L10C1"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:text="@string/top10_l10"/>
                    <TextView
                        android:layout_width="200dp"
                        android:id="@+id/tv_top10L10C2"
                        android:textSize="20sp"
                        android:textAlignment="center"/>

                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/bt_top10_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:textColor="#C9C9C9"
                android:text="string/top10_cancel"
                android:layout_alignParentLeft="true" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
